--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pasta-app",
-  "homepage": "https://github.com/PATERILLETTES/pasta-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://YOUR_USERNAME.github.io/pasta-app",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
