--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "pasta-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://YOUR_USERNAME.github.io/pasta-app",
+  "homepage": "https://paterillettes.github.io/pasta-app/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
